--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                 floatingDots.appendChild(dot);
             }
 
-            const primaryStream = "https://myctxa.temycssme.wiki/720p.m3u8";
+            const primaryStream = "https://smart.bengaldigital.live/T-Sports_HD/tracks-v1a1/mono.m3u8";
             const fallbackStream = "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8";
             let hls;
             let isLive = true;
